--- a/templates/Dias.html
+++ b/templates/Dias.html
@@ -1,39 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><whatever> tourism</title>
-    <meta http-equiv="Content-Type"content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/style.css" rel="stylesheet" media="screen">
+{% extends 'base.html' %}
 
-  </head>
-  <body>
-    
-  <div class="navbar">
-    <a class="navbar-brand" href="#"> < whatever > Tourism</a>
-    <ul class="nav navbar-nav">
-      <li><a href="Home.html"> Home</a></li>
-      <li><a href="Paris.html"> Paris</a></li>
-      <li class="active"><a href="Cronograma.html"> Cronograma</a></li>
-      <li><a href="Dicas.html"> Dicas</a></li>
-    </ul>
-  </div>
-
-   <div>
+{% block container %}
+    <div>
     <ul class="cronograma nav nav-tabs">
-      <li class="active"><a href="Dias.html"> Dias</a></li>
-      <li><a href="VerCronograma.html"> Ver cronograma</a></li>
+      <li class="active"><a href="{% url 'cronograma_dias' %}"> Dias</a></li>
+      <li><a href="{% url 'ver_cronograma' %}"> Ver cronograma</a></li>
     </ul>
   </div>
 
-    <!-- JavaScript plugins (requires jQuery) -->
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-    <script src="js/respond.js"></script>
-  </body>
-</html>
+{% endblock %}
