--- a/templates/Paris.html
+++ b/templates/Paris.html
@@ -8,7 +8,7 @@
     </button>
 
     <ul class="dropdown-menu">
-      <li><a href="{% url 'paris_restaurante' %}">Todos</a></li>
+      <li><a href="{% url 'paris_restaurantes' %}">Todos</a></li>
       <li><a href="#">Contemporânea</a></li>
       <li><a href="#">Italiana</a></li>
       <li><a href="#">Japonesa</a></li>
@@ -23,10 +23,10 @@
     </button>
 
     <ul class="dropdown-menu">
-      <li><a href="Diversão.html">Todos</a></li>
-      <li><a href="#">Contemporânea</a></li>
-      <li><a href="#">Italiana</a></li>
-      <li><a href="#">Japonesa</a></li>
+      <li><a href="{% url 'paris_diversao' %}">Todos</a></li>
+      <li><a href="#">Museus</a></li>
+      <li><a href="#">+Conhecidos</a></li>
+      <li><a href="#">Boates</a></li>
     </ul>
     
   </div>
@@ -38,10 +38,10 @@
     </button>
 
     <ul class="dropdown-menu">
-      <li><a href="Eventos.html">Todos</a></li>
-      <li><a href="#">Contemporânea</a></li>
-      <li><a href="#">Italiana</a></li>
-      <li><a href="#">Japonesa</a></li>
+      <li><a href="{% url 'paris_eventos' %}">Todos</a></li>
+      <li><a href="#">Shows</a></li>
+      <li><a href="#">Teatro</a></li>
+      <li><a href="#">Boates</a></li>
     </ul>
     
   </div>
