--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <li><a href="{% url 'home' %}"> Home</a></li>
       <li><a href="{% url 'paris' %}"> Paris</a></li>
       <li><a href="{% url 'cronograma' %}"> Cronograma</a></li>
-      <li><a href="/dicas"> Dicas</a></li>
+      <li><a href="{% url 'dicas' %}"> Dicas</a></li>
     </ul>
   </div>
 
