--- a/templates/Cronograma.html
+++ b/templates/Cronograma.html
@@ -3,8 +3,8 @@
 {% block container %}
     <div>
     <ul class="cronograma nav nav-tabs">
-      <li class="active"><a href="Dias.html"> Dias</a></li>
-      <li><a href="VerCronograma.html"> Ver cronograma</a></li>
+      <li class="active"><a href="{% url 'cronograma_dias' %}"> Dias</a></li>
+      <li><a href="{% url 'ver_cronograma' %}"> Ver cronograma</a></li>
     </ul>
   </div>
 {% endblock %}
