--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,14 @@
   <body>
 
   <div class="navbar">
-    <a class="navbar-brand" href="#"> < whatever > Tourism</a>
+    <a class="navbar-brand" href="#"> < WhereEver > Tourism</a>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'home' %}"> Home</a></li>
       <li><a href="{% url 'paris' %}"> Paris</a></li>
       <li><a href="{% url 'cronograma' %}"> Cronograma</a></li>
       <li><a href="{% url 'dicas' %}"> Dicas</a></li>
     </ul>
+
   </div>
 
   <div>
