--- a/templates/Logar.html
+++ b/templates/Logar.html
@@ -9,10 +9,8 @@
   </head>
   <body>
 
-      <a href="https://www.facebook.com/dialog/oauth?client_id=200112130164945&redirect_uri=http://localhost:8000/&scope=email,user_location">Entrar com Facebook</a>
-
-    <div class="navbar">
-      <a class="navbar-brand" href="{% url 'home' %}"> < WhereEver > Tourism</a>
-    </div>
+<div class="navbar">
+    <a class="navbar-brand" href="#.html"> < WhereEver > Tourism</a>
+</div>
   </body>
 </head>
