--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-  <div class="navbar">
+  <div class="navbar navbar-fixed-top">
     <a class="navbar-brand" href="#"> < WhereEver > Tourism</a>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'home' %}"> Home</a></li>
