--- a/templates/Dicas.html
+++ b/templates/Dicas.html
@@ -1,18 +1,25 @@
 {% extends 'base.html' %}
 
 {% block container %}
-
-      <h1 style="color: #551A8B"> Onde ficar? </h1>
+      <h1 style="color: #551A8B"> <font size=5> Onde ficar? </font></h1>
         <p style="color: #9C9C9C"> 
 Paris é dividida em 20 bairros numerados, ou arrondissements organizados em espiral a partir do coração da cidade, onde estão a estação Châtelet (a mais movimentada) e o Louvre.<br />
 Quanto mais baixo o número do arrondissement, mais central é a sua localização (e mais fácil fica para você se locomover). Tente ficar entre os arrondissements 1 e 6 (Châtelet/Louvre, Bourse, Marais, île St.-Louis, Quartier Latin, Sorbonne, St.-Germain), e você chegará mais rápido a qualquer canto da cidade.<br />
 Evite barbadas em fim de linha de metrô; a dica é não se hospedar perto das “Portes”, que são os limites de Paris.<br />
         </p>
-      <h2 style="color: #551A8B"> Quando ir? </h2>
-        <p style="color: #9C9C9C"> 
+
+      <h2 style="color: #551A8B"> <font size=5> Quando ir? </font> </h2>
+        <p2 style="color: #9C9C9C"> 
           Não existe época imprópria para visitar Paris. Mas tampouco — pelo menos do ponto de vista meteorológico — existe uma época perfeita.<br />
           Os céus de Paris costumam estar mais cinzentos do que ensolarados, e é difícil escapar de alguma chuva, não importa quando você vá. Nevar é raro (quando acontece, é mais para o finzinho de janeiro ou em fevereiro).<br />
-           <!-- Bootstrap <img src="foto.jpg" /> -->
-        </p>
+          
+        </p2>
+
+		<br>
+
+       <h3 style="color: #551A8B"> <font size=5> Seguro Obrigatório </font> </h3>
+        <p3 style="color: #9C9C9C">
+        	O Tratado de Schengen é um acordo assinado entre países da Comunidade Européia (Bélgica, Dinamarca, Alemanha, Finlândia, França, Grécia, Islândia, Itália, Luxemburgo, Holanda, Noruega, Áustria, Portugal, Espanha e Suécia) que estabelece a obrigatoriedade de que os turistas visitando esses países comprovem possuir uma Assistência a Viagens com valor mínimo de € 30.000 para garantir assistência médica por doença ou acidente. Quer dizer que todo estrangeiro que for para algum país europeu (que faz  parte do Tratado de Schengen)  precisa fazer um seguro de viagem, para cobertura de despesas médicas ou hospitalares.
+        </p3>
         
 {% endblock %}
