--- a/templates/VerCronograma.html
+++ b/templates/VerCronograma.html
@@ -3,6 +3,7 @@
 {% block container %}
     <div>
     <ul class="cronograma nav nav-tabs">
+      <li><a href="{% url 'primeirosPassos' %}"> Primeiros Passos </a></li>
       <li><a href="{% url 'cronograma_dias' %}"> Dias</a></li>
       <li class="active"><a href="{% url 'ver_cronograma' %}"> Ver cronograma</a></li>
     </ul>
