--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><whatever> tourism</title>
+    <title> < WhereEver > Tourism</title>
     <meta http-equiv="Content-Type"content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-  <div class="navbar navbar-fixed-top">
+  <div class="navbar">
     <a class="navbar-brand" href="#"> < WhereEver > Tourism</a>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'home' %}"> Home</a></li>
@@ -36,10 +36,11 @@
 
   </div>
 
-  <div>
+<div>
     {% block container %}
     {% endblock %}
-  </div>
+</div>
+
     <!-- JavaScript plugins (requires jQuery) -->
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
