--- a/templates/Dias.html
+++ b/templates/Dias.html
@@ -24,6 +24,31 @@
       <li><a href="#">Quarto dia</a></li>
     </ul>
   </div>
+<table class="table table-condensed">
+    <tr>
+      <td>
+      <b><h4>Horários</h4></b>
+      </td>
 
+      <td>
+      <b><h4>Lugares</h4></b>
+      </td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+      <td><b><h4></h4></b></td>
+    </tr>
+    <tr>
+      <td>
+      <b><h4><input name="hora" type="time"/>
+            <input name="hora" type="time"/></h4></b>
+      </td>
+    </tr>
 
 {% endblock %}
