--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -1,3 +1,11 @@
 .cronograma.nav{
 	padding-left: 20px;
 }
+
+.dropdown-menu{
+	padding-left: 20px;
+}
+
+.header {
+  border-bottom: 1px solid #e5e5e5;
+}
