--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/style.css" rel="stylesheet" media="screen">
+    <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" media="screen">
+    <link href="{{STATIC_URL}}css/jumbotron-narrow.css" rel="stylesheet" media="screen">
+    <link href="{{STATIC_URL}}css/datepicker.css" rel="stylesheet" media="screen">
   </head>
   <body>
 
@@ -45,6 +47,7 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+    <script src="{{STATIC_URL}}js/bootstrap-datepicker.js"></script>
 
     <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
     <script src="{{STATIC_URL}}js/respond.js"></script>
