--- a/templates/PrimeirosPassos.html
+++ b/templates/PrimeirosPassos.html
@@ -11,30 +11,67 @@
 
 <br>
 <form>
-<fieldset>
-<legend> Período da viagem </legend>
-<ul>
-<li>
-<label for="nome">Ida:</label>
-<input name="calendario" type="datetime"/>  
-<label for="nome">Volta:</label>
-<input name="calendario" type="datetime"/>
-</li>
+	<fieldset>
+	<legend> Período da viagem </legend>
+	<ul>
+					<html lang="en">
+						<head>
+						  <meta charset="utf-8" />
+						  <title>jQuery UI Datepicker - Default functionality</title>
+						  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+						  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+						  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+						  <link rel="stylesheet" href="/resources/demos/style.css" />
+						  <script>
+						  $(function() {
+						    $( "#datepicker" ).datepicker();
+						  });
+						  </script>
+						</head>
+						<body>
+						 
+						<p>Ida: <input type="text" id="datepicker" /></p>
+						 
+						</body>
+					</html>  
+
+					<html lang="en">
+						<head>
+						  <meta charset="utf-8" />
+						  <title>jQuery UI Datepicker - Default functionality</title>
+						  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+						  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+						  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+						  <link rel="stylesheet" href="/resources/demos/style.css" />
+						  <script>
+						  $(function() {
+						    $( "#datepicker2" ).datepicker();
+						  });
+						  </script>
+						</head>
+						<body>
+						 
+						<p>Volta: <input type="text" id="datepicker2" /></p>
+						 
+						</body>
+					</html> 
+	</ul>
 </form>
 
 
 <br>
 
 <form>
-<fieldset>
-<legend> Horário de chegada e partida </legend>
-<ul>
-<li>
-<label for="nome">Ida:</label>
-<input name="hora" type="time"/>  
-<label for="nome">Volta:</label>
-<input name="hora" type="time"/>
-</li>
+	<fieldset>
+	<legend> Horário de chegada e partida </legend>
+	<ul>
+		<li>
+			<label for="nome">Ida:</label>
+			<input name="hora" type="time"/>  
+			<label for="nome">Volta:</label>
+			<input name="hora" type="time"/>
+		</li>
+	</ul>
 </form>
 
 {% endblock %}
