Dicas fixo e descricao por tipo 2.0

--- a/templates/Dicas.html
+++ b/templates/Dicas.html
@@ -3,6 +3,9 @@
 {% block container %}
   
   <div>
+      <center><h1 style="color: #551A8B"> <font size=5> Dicas que você não pode esquecer </font></h1></center>
+        <p style="color: #9C9C9C"></p>
+
     <ul class="paris nav nav-tabs">
       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'paris_restaurantes' %}"> Restaurantes <span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -27,7 +30,6 @@
           <li><a href="{% url 'paris_eventos' %}">Todos</a></li>
           <li><a href="#">Shows</a></li>
           <li><a href="#">Teatro</a></li>
-          <li><a href="#">Boates</a></li> 
         </ul> 
       </li>
 
