--- a/templates/AdicionarRestaurante.html
+++ b/templates/AdicionarRestaurante.html
@@ -11,11 +11,12 @@
 		</div>
 
 		<div class="form-group">
-			<label for="inputDescricao" class="col-lg-2 control-label"><font size=4> Descricao </font></label>
+			<label for="inputTipo" class="col-lg-2 control-label"><font size=4> Tipo </font></label>
 			<div class="col-lg-4">
-				<input type="text" class="form-control" id="inputDescricao" placeholder="Descricao">
+				<input type="text" class="form-control" id="inputTipo" placeholder="Tipo">
 			</div>
 		</div>
+
 
 		<div class="form-group">
 			<label for="inputNotaMedia" class="col-lg-2 control-label"><font size=4> Nota média </font></label>
