--- a/templates/base.html
+++ b/templates/base.html
@@ -11,25 +11,28 @@
     <link href="{{STATIC_URL}}css/datepicker.css" rel="stylesheet" media="screen">
   </head>
   <body>
+  <div id="Base">
+    <div id="Topo">
+      <div class="navbar navbar-fixed-top">
+        <a class="navbar-brand" href="#"> <font color="009ACD" font face="cursive">< WhereEver > Tourism</font></a>
+        <ul class="nav navbar-nav">
+          <li><a href="{% url 'home' %}"> Home</a></li>
+          
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'paris' %}"> Lugares <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li>  
+                <a href="{% url 'paris' %}"> Paris </a>
+              </li>  
+            </ul> 
+          </li>
 
-  <div class="navbar">
-    <a class="navbar-brand" href="#"> < WhereEver > Tourism</a>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'home' %}"> Home</a></li>
-      
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'paris' %}"> Lugares <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li>  
-            <a href="{% url 'paris' %}"> Paris </a>
-          </li>  
-        </ul> 
-      </li>
-
-      <li><a href="{% url 'cronograma' %}"> Cronograma</a></li>
-    </ul>
-
+          <li><a href="{% url 'cronograma' %}"> Cronograma</a></li>
+        </ul>
+      </div>
+    </div>
+    <br>
+    <br> 
   </div>
-
 <div>
     {% block container %}
     {% endblock %}
